--- a/static/style.css
+++ b/static/style.css
@@ -69,6 +69,42 @@ nav a, nav a:link, nav a:visited, nav a:hover, nav a:active {
   color: #999;
 }
 
+/* search form */
+
+.search-container {
+  margin: 32px 0 32px 0;
+  width: 100%;
+}
+
+.search-form {
+  width: 100%;
+  display: flex;
+}
+
+#search-keyword {
+  flex: 2;
+  font-size: 14pt;
+  color: #666;
+  padding: 8px 16px 8px 16px;
+  margin-right: 16px;
+  box-sizing: border-box;
+  border: 1px dashed #ddd;
+  border-radius: 8px;
+}
+
+input::placeholder {
+  color: #bbb;
+}
+
+#search-button {
+  font-size: 14pt;
+  color: #666;
+  padding: 8px 24px 8px 24px;
+  background: #f4f4f4;
+  border: 1px dashed #ddd;
+  border-radius: 8px;
+}
+
 /* content */
 
 .content-container {
