Update background color for dark theme

--- a/static/style.css
+++ b/static/style.css
@@ -508,7 +508,7 @@ footer {
   }
 
   .header-content {
-    background-color: #2a2f38;
+    background-color: #272c34;
     border-bottom: 1px solid #5b6268;
   }
 
