--- a/static/style.css
+++ b/static/style.css
@@ -258,6 +258,8 @@ div.outline-text-2 > hr {
 }
 
 .mid-ad-container {
+  position: absolute;
+  left: 0;
   width: 100%;
   padding: 0;
   margin: 0 auto;
