--- a/static/style.css
+++ b/static/style.css
@@ -258,7 +258,8 @@ div.outline-text-2 > hr {
 }
 
 .mid-ad-container {
-  width: 100%;
+  width: 100vw;
+  max-width: 1024px;
   padding: 0;
   margin: 0 auto;
   margin-top: 48px;
