--- a/static/style.css
+++ b/static/style.css
@@ -258,18 +258,16 @@ div.outline-text-2 > hr {
 }
 
 .mid-ad-container {
-  width: 100vw;
-  /* max-width: 1024px; */
+  width: 100%;
   padding: 0;
-  /* margin: 0 auto; */
+  margin: 0 auto;
   margin-top: 48px;
   margin-bottom: 48px;
   text-align: center;
 }
 
 .mid-ad {
-  max-width: 1024px;
-  margin: 0 auto;
+  width: 100%;
 }
 
 .bottom-ad-container {
