--- a/static/style.css
+++ b/static/style.css
@@ -258,11 +258,13 @@ div.outline-text-2 > hr {
 }
 
 .mid-ad-container {
-  width: 100%;
+  width: 100vw;
   padding: 0;
-  margin: 0 auto;
-  margin-top: 48px;
-  margin-bottom: 48px;
+  margin: 48px 0 4px 0;
+  /* margin: 0 auto; */
+  /* margin-top: 48px; */
+  /* margin-bottom: 48px; */
+  margin-left: calc(50% - 50vw);
   text-align: center;
 }
 
