update google auto ad style

--- a/static/v2style.css
+++ b/static/v2style.css
@@ -395,6 +395,10 @@ td.org-left {
     text-align: center;
 }
 
+.google-auto-placed {
+    height: auto !important;
+}
+
 /* spliter */
 
 .splitter-container {
