--- a/static/v2style.css
+++ b/static/v2style.css
@@ -340,6 +340,14 @@ h6 {
     border-bottom: 1px solid #eeeeee;
 }
 
+/* spacing between thead and tbody */
+.content table tbody:before {
+    content: "-";
+    display: block;
+    line-height: 10px;
+    color: transparent;
+}
+
 .content table th {
     padding: 5px 14px 4px 14px;
 }
