--- a/static/v2style.css
+++ b/static/v2style.css
@@ -289,6 +289,8 @@ h6 {
     font-family: monospace;
     overflow-x: auto;
     line-height: 1.2rem;
+    border-radius: 8px;
+    font-size: 1.0rem;
     /*white-space: pre-wrap;*/
 }
 
