--- a/static/v2style.css
+++ b/static/v2style.css
@@ -419,6 +419,14 @@ td.org-left {
 
 /* AD */
 
+.top-ad-container {
+    width: 100vw;
+    padding: 0;
+    margin: 30px 0 0 0;
+    margin-left: calc(50% - 50vw);
+    text-align: center;
+}
+
 .mid-ad-container {
     width: 100vw;
     padding: 0;
