--- a/static/v2style.css
+++ b/static/v2style.css
@@ -303,7 +303,7 @@ h6 {
 }
 
 .content blockquote {
-    margin: 1.6rem 0 1.6rem 0;
+    margin: 32px 0 32px 0;
     padding-left: 24px;
     border-left: 2px solid #ee746f;
 }
